--- a/index.html
+++ b/index.html
@@ -7,28 +7,76 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <nav>
-      <div id="logo">
-        <img src="assets/logo.svg" alt="Logo KOOLSKICKS">
-        <h2>KOOLKICKS</h2>
+    <header>
+      <nav>
+        <div id="logo">
+          <img src="assets/logo.svg" alt="Logo KOOLSKICKS">
+          <h2>KOOLKICKS</h2>
+        </div>
+        <ul class="navbar">
+          <li><a class="link" href="">Nouveatés</a></li>
+          <li><a class="link" href="">Rechercher</a></li>
+          <li><a class="link" href="">Contacter</a></li>
+        </ul>
+        <div id="login">
+          <a class="button primary" href="">Mon panier</a>
+          <img class="avatar" src="assets/avatar.jpg" alt="avatar image">
+        </div>
+      </nav>
+      <div  class="hero">
+        <div class="titles">
+          <h1>KOOLKICKS</h1>
+          <p>la bonne decision</p>
+        </div>
+        <div class="element buttons-container">
+          <a class="button primary" href="#">Acheter</a>
+          <a class="button secondary" href="">Collection</a>
       </div>
-      <ul class="navbar">
-        <li><a class="link" href="">Nouveatés</a></li>
-        <li><a class="link" href="">Rechercher</a></li>
-        <li><a class="link" href="">Contacter</a></li>
-      </ul>
-      <div id="login">
-        <a class="button primary" href="">Mon panier</a>
-        <img class="avatar" src="assets/avatar.jpg" alt="avatar image">
       </div>
-    </nav>
+    </header>
     <main>
-      <h1 id="hero">
-        Nos derniéres sneakers
+      <h1 id="main-title">
+        Nos dernières sneakers
       </h1>
       <div class="caroussel">
         <div class="card">
           <img src="assets/shoes-1.jpg" alt="">
+          <div class="description">
+            <div class="titles">
+              <h2>Nike</h2>
+              <h3>120€</h3>
+            </div>
+            <p>Nos nouvelles chaussures présentent les dernières technologies, des tissus techniques et des lignes tendance.
+              Livraison et retours gratuits.</p>
+            <a class="button primary" href="">Ajouter au panier</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/shoes-2.jpg" alt="">
+          <div class="description">
+            <div class="titles">
+              <h2>Nike</h2>
+              <h3>120€</h3>
+            </div>
+            <p>Nos nouvelles chaussures présentent les dernières technologies, des tissus techniques et des lignes tendance.
+              Livraison et retours gratuits.</p>
+            <a class="button primary" href="">Ajouter au panier</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/shoes-3.jpg" alt="">
+          <div class="description">
+            <div class="titles">
+              <h2>Nike</h2>
+              <h3>120€</h3>
+            </div>
+            <p>Nos nouvelles chaussures présentent les dernières technologies, des tissus techniques et des lignes tendance.
+              Livraison et retours gratuits.</p>
+            <a class="button primary" href="">Ajouter au panier</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/shoes-4.jpg" alt="">
           <div class="description">
             <div class="titles">
               <h2>Nike</h2>
